# sport-registry-nn

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  start.py
settings/: __init__.py
source/: cleaning.py  data.py  neural_network.py  services.py
